website.css
/* ... */
.introNote:before {
  content: "";
  position: absolute;
  top: 0%;
  left: 0;
  height: 50px;
  width: 100%;
  margin-top: -25px;
  background: url(tape.svg) bottom center;
  background-size: 100% 100%;
  opacity: 0.7;
  transform: rotate(-6deg);
}

.introNote:after {
  content: "";
  position: absolute;
  top: 100%;
  left: 0;
  height: 50px;
  width: 100%;
  margin-top: -25px;
  background: url(tape.svg) bottom center;
  background-size: 100% 100%;
  opacity: 0.7;
}

.introNoteTitle {
  position: relative;
  width: 100%;
}

.introNoteContent {
  position: relative;
  margin: 0 auto;
  width: 100%;
}

.introOne {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.introIconOne {
  position: relative;
  width: 30%;
  order: 1;
}

.introTextOne {
  margin-left: 50px;
  position: relative;
  width: 70%;
  order: 2;
}

.introTwo {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.introIconTwo {
  position: relative;
  width: 30%;
  order: 2;
}

.introTextTwo {
  margin-right: 50px;
  position: relative;
  width: 70%;
  order: 1;
}

.education, .experience, .skills, .interests, .whyCoding, .whyFAC {
  text-align: left;
  line-height: 0.5em;
  position: relative;
  width: 100%;
  padding: 0em 5em 0em 5em;
  background: #fdfdfd;
  box-shadow: 5px 10px 10px 0px #000000;

}

.hiddenEducation {
  display: none;
  position: relative;
  margin-top: 30px;
  margin-bottom: 30px;
  width: 100%;
  max-height: 0;
  transition: max-height 0.2s ease-out;
  z-index: 1;
}

.hiddenExperience {
  display: none;
  position: relative;
  margin-top: 30px;
  margin-bottom: 30px;
  width: 100%;
  max-height: 0;
  transition: max-height 0.2s ease-out;
  z-index: 1;
}

.hiddenSkills {
  display: none;
  position: relative;
  margin-top: 22px;
  width: 100%;
  max-height: 0;
  transition: max-height 0.2s ease-out;
}

.webSkillz {
  position: relative;
  margin-top: -40px;
  margin-bottom: 20px;
  width: 100%;
  preserveAspectRatio: none
}

.hiddenInterests {
  display: none;
  margin-top: 30px;
  max-height: 0;
  transition: max-height 0.2s ease-out;
}

.hiddenWhyFAC {
  display: none;
  position: relative;
  margin-top: 30px;
  /* margin-bottom: 15px; */
  width: 100%;
  height: auto;
  max-height: 0;
  transition: max-height 0.2s ease-out;
}

.calculator {
  width: 100%;
  height: 500px;
  background: url(calculator.svg);
  background-repeat: no-repeat;
  background-attachment: cover;
  background-position: center center;
}

.hiddenWhyCoding {
  display: none;
  position: relative;
  margin-top: 30px;
  margin-bottom: 10px;
  width: 100%;
  /* height: auto; */
  max-height: 0;
  transition: max-height 0.2s ease-out;
}

.firstCode {
  position: relative;
  width: 100%;
  margin: 0 auto;
  /* margin-top: 1em; */
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  /* flex-wrap: wrap; */
}

.helloWorldScreengrab {
  width: 23%;
  height: auto;
  /* margin-right: 5%; */
}

#helloWorld {
  width: 100%;
}

.helloWorldReaction {
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* object-fit: contain; */
}

#wizardGIF, #whatGIF {
  width: 100%;
  max-height: 171px;
}

/* #helloWorld {
  width: 25%;
} */

.footer {
  width: 100%;
  position: relative;
  background: #fdfdfd;
  box-shadow: 5px 10px 10px 0px #000000;
}

.socialIcons {
  width: 300px;
  margin: auto;
  margin-top: 1em;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.githubIcon, .twitterIcon, .linkedinIcon, .freecodecampIcon {
  fill: #111;
  opacity: 0.5;
  transition: all 0.25s ease;
  cursor: pointer;
  margin-right: 1em;
  width: calc(20% - 1em);
  height: 45px;
}

.codewarsIcon {
  fill: #111;
  opacity: 0.5;
  transition: all 0.25s ease;
  cursor: pointer;
  width: calc(20% - 1em);
  height: 45px;
}

.githubIcon:hover, .twitterIcon:hover, .linkedinIcon:hover, .freecodecampIcon:hover, .codewarsIcon:hover {
  fill: #191717;
  opacity: 1;
  cursor: pointer;
}

/*====================== SVG ADVENTURE ANIMATIONS ================*/

.storyContent {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-top: 20px;
  height: 100%;
  z-index: 2;
}

.caption {
  font-family: 'Permanent Marker', cursive;
  font-size: 28px;
  font-weight: 400;
  margin-top: -50px;
}

#sceneOne {
  preserveAspectRatio: xMidYMid meet
  max-width: 390px;
  max-height: 285px;
  border-top: 25px solid white;
  border-left: 15px solid white;
  border-right: 15px solid white;
  border-bottom: 70px solid white;
  box-sizing: content-box;
  /* width: 297.640px;
  height: 223.289px; */
}

.panelOne {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 50%;
  margin-left: 10px;
  margin-top: 20px;
  transform: rotate(2deg);
  order: 1;
}

.storyOne {
  font-family: 'Indie Flower', cursive;
  font-size: 18px;
  position: relative;
  width: 50%;
  height: 100%;
  padding: 0em 1em 0em 1em;
  background: #A1D350;
  order: 2;
  margin-right: 10px;
  transform: rotate(-2deg);
}

.storyOne:after {
  content: "";
  position: absolute;
  top: 100%;
  left: 0;
  height: 50px;
  width: 100%;
  margin-top: -13px;
  background: url(green_postit.svg) bottom center;
  background-repeat: no-repeat;
  background-size: 100% 100%;
}

#sceneTwo {
  preserveAspectRatio: xMidYMid meet
  max-width: 390px;
  max-height: 285px;
  border-top: 25px solid white;
  border-left: 15px solid white;
  border-right: 15px solid white;
  border-bottom: 70px solid white;
  box-sizing: content-box;
  /* width: 297.640px;
  height: 223.289px; */
}

.panelTwo {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 50%;
  margin-right: 10px;
  margin-top: -10px;
  transform: rotate(-2deg);
  order: 2;
}
/* ... */

